# themis

./: .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  Justfile  README.md  rust-toolchain.toml
.github/workflows/: checks.yml  linting.yml  security.yml  tests.yml
code/: .rustfmt.toml  Cargo.toml  build.rs  rust-toolchain.toml
code/src/: lib.rs  main.rs
code/src/ffi/: Makefile
code/src/ffi/src/: ffi.cc  ffi.hh
src/: lib.rs  main.rs
