# -----------------------------------------------
# ----  Package  --------------------------------
# -----------------------------------------------

[package]
name = 'yourprojectname'
version = '0.1.0'
edition = '2021'

authors = ['Georg Lauterbach (@georglauterbach)']

description = ''
documentation = ''
license = 'GPL-3.0'
readme = '../README.md'

homepage = ''
repository = ''

keywords = [
  'template',
  'high quality',
]

categories = [
  'config',
]

publish = false

# Cargo's auto-detection of library files is turned on. Therefore,
# `src/lib.rs` is automatically detected by Cargo as a freestanding
# library. We need to define some code segments twice, here as well
# as an in `src/main.rs` as this file is tested by Cargo separately.
# This file can then be used in integration tests as well.
autobenches = true
autobins = true
autoexamples = true
autotests = true

# -----------------------------------------------
# ----  Profiles  -------------------------------
# -----------------------------------------------

[profile.release]
codegen-units = 1
incremental = true
lto = true
overflow-checks = true

[profile.dev]
lto = false

# -----------------------------------------------
# ----  General Dependencies  -------------------
# -----------------------------------------------

[dependencies]
atty = '0.2.14'
clap = '3.1.6'
clap-verbosity-flag = '1.0.0'
lazy_static = '1.4.0'
log = '0.4.16'
termcolor = '1.1.3'
time = { version = '0.3.9', features = ['formatting', 'local-offset'] }

# -----------------------------------------------
# ----  Workspace  ------------------------------
# -----------------------------------------------

[workspace]

# -----------------------------------------------
# ----  Tests  ----------------------------------
# -----------------------------------------------

[[test]]
name = 'default'
