# -----------------------------------------------
# ----  Package  --------------------------------
# -----------------------------------------------

[package]
name = 'yourprojectname'
version = '0.1.0'
edition = '2021'

authors = ['Georg Lauterbach (@georglauterbach)']

description = ''
documentation = ''
license = 'GPL-3.0'
readme = '../README.md'

homepage = ''
repository = ''

keywords = [
  'template',
  'high quality',
]

categories = [
  'config',
]

publish = false

# Cargo's auto-detection of library files is turned on. Therefore,
# `src/lib.rs` is automatically detected by Cargo as a freestanding
# library. We need to define some code segments twice, here as well
# as an in `src/main.rs` as this file is tested by Cargo separately.
# This file can then be used in integration tests as well.
autobenches = true
autobins = true
autoexamples = true
autotests = true

# -----------------------------------------------
# ----  Profiles  -------------------------------
# -----------------------------------------------

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

incremental = false

debug = false
debug-assertions = false
overflow-checks = false
strip = "none"

[profile.dev]
opt-level = 0
lto = false

incremental = true

debug = true
debug-assertions = true
overflow-checks = true
strip = false


[profile.release.build-override]
inherits = "release"

# -----------------------------------------------
# ----  Dependencies  ---------------------------
# -----------------------------------------------

[dependencies]
atty = '0.2.14'
clap = '3.1.6'
clap-verbosity-flag = '1.0.0'
lazy_static = '1.4.0'
log = '0.4.16'
termcolor = '1.1.3'
time = { version = '0.3.9', features = ['formatting', 'local-offset'] }

[build-dependencies]
bindgen = "0.60.1"
const_format = "0.2.24"

# -----------------------------------------------
# ----  Workspace  ------------------------------
# -----------------------------------------------

[workspace]

# -----------------------------------------------
# ----  Tests  ----------------------------------
# -----------------------------------------------

[[test]]
name = 'default'
